[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Menus/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0.137255, 0.0117647, 0.141176, 0.658824 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 120.0
margin_top = 43.0
margin_right = 199.0
margin_bottom = 136.0
custom_constants/separation = 15

[node name="PauseLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 79.0
margin_bottom = 15.0
text = "Game Paused"
align = 1
uppercase = true

[node name="ResumeGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 79.0
margin_bottom = 41.0
text = "Resume Game"

[node name="QuitToMainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 79.0
margin_bottom = 67.0
text = "Back to Main Menu"

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 79.0
margin_bottom = 93.0
text = "Quit to Desktop"
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeGameButton" to="." method="_on_ResumeGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitToMainMenuButton" to="." method="_on_QuitToMainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
